--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :category_id %>
+    <%= f.collection_select :category_id, Category.order(:name), :id, :name, { include_blank: true }, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :all_tags %>
     <%= f.text_field :all_tags, class: 'form-control' %>
   </div>
