--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,14 @@
+<%= render 'shared/breadcrumb', category: @post.category %>
+
 <article class="post">
   <section class="post-head">
     <h1><%= @post.title %></h1>
     <small>
       <time><%= @post.created_at.to_date.strftime("%d %B, %Y") %></time>
+      <% if @post.category.present? %>
+        |
+        <%= link_to @post.category.name, @post.category %>
+      <% end %>
       |
       <%= link_to 'Изменить', edit_post_path(@post) %>
       |
