--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,22 @@
 
   <body>
     <div class="container">
-      <nav class="navbar navbar-light bg-faded">
-        <ul class="nav navbar-nav">
-          <li class="nav-item <%= 'active' if current_page?(root_path) || current_page?(posts_path) %>">
-            <a class="nav-link" href="<%= root_path %>">Все статьи</a>
-          </li>
-          <% Category.order(:name).roots.each do |category| %>
-            <li class="nav-item <%= 'active' if current_page?(category_path(category)) %>">
-              <%= link_to category.name, category, class: 'nav-link' %>
+      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <a class="navbar-brand" href="#">Блог на RoR</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item <%= 'active' if current_page?(root_path) || current_page?(posts_path) %>">
+              <a class="nav-link" href="<%= root_path %>">Все статьи</a>
             </li>
-          <% end %>
-        </ul>
-        <%= link_to 'Новая статья', new_post_path, class: 'btn btn-outline-primary pull-xs-right' %>
+            <% Category.order(:name).roots.each do |category| %>
+              <li class="nav-item <%= 'active' if current_page?(category_path(category)) %>">
+                <%= link_to category.name, category, class: 'nav-link' %>
+              </li>
+            <% end %>
+          </ul>
+          <%= link_to 'Новая статья', new_post_path, class: 'btn btn-outline-primary pull-xs-right' %>
+        </div>
       </nav>
     </div>
 
