--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,10 +7,12 @@
         |
         <%= link_to post.category.name, post.category %>
       <% end %>
-      |
-      <%= link_to 'Изменить', edit_post_path(post) %>
-      |
-      <%= link_to 'Удалить', post_path(post), method: :delete, data: { confirm: 'Вы уверены?' } %>
+      <% if user_signed_in? %>
+        |
+        <%= link_to 'Изменить', edit_post_path(post) %>
+        |
+        <%= link_to 'Удалить', post_path(post), method: :delete, data: { confirm: 'Вы уверены?' } %>
+      <% end %>
     </small>
   </section>
 
