--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,11 +7,11 @@
         |
         <%= link_to post.category.name, post.category %>
       <% end %>
-      <% if user_signed_in? %>
+      <% if user_signed_in? && current_user.admin? %>
         |
-        <%= link_to 'Изменить', edit_post_path(post) %>
+        <%= link_to 'Изменить', edit_admin_post_path(post) %>
         |
-        <%= link_to 'Удалить', post_path(post), method: :delete, data: { confirm: 'Вы уверены?' } %>
+        <%= link_to 'Удалить', admin_post_path(post), method: :delete, data: { confirm: 'Вы уверены?' } %>
       <% end %>
     </small>
   </section>
