fix submenu style

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -7,8 +7,13 @@
   input, textarea
     border-color: #d01612
 
-.nested_nav
-  margin-left: 1em
-
 .tag_cloud
   margin-top: 2em
+
+.submenu
+  ul.subnav
+    list-style: none
+    padding-left: 0
+
+  ul.nested_nav
+    padding-left: 1em
