--- a/app/views/shared/_submenu.html.erb
+++ b/app/views/shared/_submenu.html.erb
@@ -1,6 +1,6 @@
 <div class="submenu">
   <h2>Категории</h2>
-  <ul class="nav nav-pills nav-stacked">
+  <ul class="subnav nav-pills nav-stacked">
     <% Category.roots.each do |category| %>
       <li class="nav-item">
         <%= link_to category.name, category, class: "nav-link #{'active' if current_page?(category_path(category)) || @post.present? && @post.category == category}" %>
