--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -41,7 +41,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit t('.submit', action: @post.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-primary' %>
+    <%= f.submit t('.submit', action: @post.new_record? ? t('common.create') : t('common.edit')), class: 'btn btn-primary' %>
     <%= link_to t('common.back'), :back, class: 'btn btn-outline-secondary' %>
   </div>
 <% end %>
