--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,3 +9,5 @@
 </section>
 
 <%= will_paginate @posts, renderer: 'BootstrapPaginationHelper::LinkRenderer' %>
+
+<script id="dsq-count-scr" src="//blogdevsimple.disqus.com/count.js" async></script>
